<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="again_to_exit_app">press the return key again to exit</string>
    <string name="rate_cancel_button_title">No, thank you</string>
    <string name="rate_message">If you think %1$s is very useful, can you rate it? The scoring process takes very little time. thank you for your support!</string>
    <string name="rate_rate_button_title">easy to use, to score</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit application</string>
    <string name="feedback">Feedback</string>
    <string name="rate_message_2">We are a positive development team dedicated to providing you with the best free apps. Your five-star rating is the best support for our development!</string>
    <string name="rate_now">Score now</string>
    <string name="QQORTEL">QQ/Tel/eMail (required)</string>
    <string name="QQlianxi">QQ contact</string>
    <string name="action_settings">Settings</string>
    <string name="ad_too_more">too many ads</string>
    <string name="app_name">节拍器</string>
    <string name="application_too_simple">Application function is too simple</string>
    <string name="beat">Time signature</string>
    <string name="benhuodongyoudisanfangpingtaitigong">This event is provided by a third-party platform. If you have any questions, please check the rules details and contact customer service</string>
    <string name="biaoti">title</string>
    <string name="bingbuzaixunwen">and no longer ask</string>
    <string name="can_ren_ju_jue">cruel rejection</string>
    <string name="changxiangsuoyoujiepai">Enjoy all the beat sounds</string>
    <string name="chongtingyici">listen again</string>
    <string name="chongwanbenguan">Replay this game</string>
    <string name="cigongnengxuyao">This feature requires</string>
    <string name="cizhongyin">sub-tone</string>
    <string name="close">close</string>
    <string name="commit">submit</string>
    <string name="commit_feedback_failed">Failed to submit feedback</string>
    <string name="commit_success">Submit successfully</string>
    <string name="contact_us">Contact us</string>
    <string name="daozuixiaosudu">to the minimum speed</string>
    <string name="dayue">about</string>
    <string name="di">第</string>
    <string name="easy_to_use">easy to use</string>
    <string name="email_contact">mail contact</string>
    <string name="fasongshibai">Send failed</string>
    <string name="feedback_commit">submit</string>
    <string name="feedback_commit_again">resubmit</string>
    <string name="feedback_commit_faile">Submission failed!</string>
    <string name="feedback_commit_success">Submit successfully!</string>
    <string name="feedback_desc">Please describe the problems or suggestions you encountered during the use of our products, we will always pay attention and continue to optimize!</string>
    <string name="feedback_input_placeholder">fill in your comments or suggestions here</string>
    <string name="feedback_success">Feedback success</string>
    <string name="feedback_success_subtitle">Your feedback has been received, we will review it carefully and fix it as soon as possible. Thank you for your continued support of %s!</string>
    <string name="feedback_text">Opinion feedback</string>
    <string name="fenzhong">minutes</string>
    <string name="fou">no</string>
    <string name="fufeizengzhifuwujiangtongguozhifubao">paid value-added services will be purchased through Alipay</string>
    <string name="fulishequ">welfare community</string>
    <string name="go_app_store_rate">Go to the app store for a review!</string>
    <string name="goumai">buy</string>
    <string name="goumaichenggonghou">After the purchase is successful, you can enjoy VIP privileges during the subscription period. After the subscription period, you need to re-purchase</string>
    <string name="goumaishuoming">purchase instructions</string>
    <string name="goumaishuominglianxifangshi">Purchase Description-Contact</string>
    <string name="goumaivipzengzhifuwuhou">After purchasing the VIP value-added service, you can enjoy it during the subscription period</string>
    <string name="guan">off</string>
    <string name="gwmpf">Give us a rating</string>
    <string name="haibucuopingjiayixia">Not bad, evaluate</string>
    <string name="houdaoda">after arriving</string>
    <string name="huoququanxian">Get permission successfully</string>
    <string name="input_contact_placeholder">QQ / mailbox / mobile phone number</string>
    <string name="input_contact_title_option">If you need to reply, you can leave your contact information:</string>
    <string name="input_contact_title_required">In order to reply to you in the future, please leave your contact information:</string>
    <string name="interaction_not_reasonable">function interaction is not reasonable</string>
    <string name="issues_and_suggestions">Questions and Suggestions</string>
    <string name="jian_yin_item_title">The reason you feel bad is:</string>
    <string name="jiandan">simple</string>
    <string name="jianshao">reduce</string>
    <string name="jiepaioryinfu">beat/note</string>
    <string name="jiepaisekuai">beat color block</string>
    <string name="jiepaixunlian">beat training</string>
    <string name="jiesheng">saving</string>
    <string name="jiesuosuoyoumorenjiapi">unlock all default beats</string>
    <string name="jiezouyin">rhythm sound</string>
    <string name="kai">open</string>
    <string name="kaishi">start</string>
    <string name="kaishisudu">start speed</string>
    <string name="kuaijiezou">fast pace</string>
    <string name="kunnan">difficulty</string>
    <string name="liangzhilaohu">two tigers</string>
    <string name="lianxifangshibunengweikong">Contact cannot be empty</string>
    <string name="liu_jian_yi_p">Leave your valuable suggestions to help us improve the product</string>
    <string name="logodesign">LOGO design applet</string>
    <string name="logosheji">The LOGO design applet is online! Art, education, games and other logos are available!</string>
    <string name="luyinshibai">The recording failed, please check the permissions and try again</string>
    <string name="mei">per</string>
    <string name="meiji">every season</string>
    <string name="meinian">every year</string>
    <string name="meiyue">monthly</string>
    <string name="mianfeijiepai">free beat</string>
    <string name="morenjiepai">default beat</string>
    <string name="need">required</string>
    <string name="needbackgroud">Do you need a background beat</string>
    <string name="neednot">not required</string>
    <string name="neirongbunengweikong">Content cannot be empty</string>
    <string name="nengzhunquedetanzoujiezou">can help accurately play the rhythm</string>
    <string name="nindedingyuejiezhiriqi">Your subscription deadline</string>
    <string name="nindexingming">your name (not required)</string>
    <string name="ninmeiyouanzhuanrenheyingyongshichang">You have not installed any application market!</string>
    <string name="ninyichenggongdingyue">You have successfully subscribed to the VIP service!</string>
    <string name="no_market_install_message">You have not installed any application market</string>
    <string name="not_easy_to_use">not easy to use</string>
    <string name="other_suggestion">Other reasons:</string>
    <string name="paihao">time signature</string>
    <string name="pinglunfasongchenggong">The comment was sent successfully</string>
    <string name="please_describe_your_issues_or_suggestions_here">Please describe your question or suggestion here</string>
    <string name="please_input_contact">Please fill in your contact information!</string>
    <string name="please_input_feedback">Please fill in your comments or suggestions!</string>
    <string name="please_install_qq">Please install QQ!</string>
    <string name="putongyinse">normal tone</string>
    <string name="qingkuai1">brisk 1</string>
    <string name="qingkuai2">light 2</string>
    <string name="qingshuruwenjianming">Please enter the file name</string>
    <string name="qingyin">light</string>
    <string name="qingyunxujiepaiqifangwen">Please allow the metronome to access camera permissions</string>
    <string name="qita">other</string>
    <string name="qq_contact">QQ contact</string>
    <string name="qqqx">Request permission</string>
    <string name="quanxianfoucewufa">permission, otherwise it can not be used normally, whether to open the settings</string>
    <string name="queding">OK</string>
    <string name="querenshifoushanchu">Are you sure to delete?</string>
    <string name="quxiao">cancel</string>
    <string name="rate_exit_button_title">Exit</string>
    <string name="rate_suggestion_button_title">I want to spit</string>
    <string name="rough_interface_design">Rough interface design</string>
    <string name="rungingbackground">The metronome is running in the background</string>
    <string name="ruyouwentilianxiqq">If you have any questions, please contact our QQ customer service: 3213640836 (Monday to Friday: 09:00 ~ 18:00)</string>
    <string name="savejiepai">save the beat</string>
    <string name="seedetail">View details</string>
    <string name="select_mail_client">Select mail client</string>
    <string name="shanguangdeng">flash</string>
    <string name="shezhi">set</string>
    <string name="shi">is</string>
    <string name="shurujiepaimingchen">Enter the beat name</string>
    <string name="shuruweikong">input is empty, please re-enter</string>
    <string name="skip">skip</string>
    <string name="srmz">Enter the name</string>
    <string name="suggestion_hint">Please write your comments and suggestions...</string>
    <string name="xunliannandu">training difficulty</string>
    <string name="youzhuyugenghaodejizhujiezou">helps to better remember the rhythm</string>
    <string name="zhongdeng">medium</string>
</resources>