<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#ff212121"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <RelativeLayout
            android:background="#ff131313"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip">

        <TextView
                android:textSize="18.0sp"
                android:textColor="#ffffffff"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/jiepaixunlian"
                android:textAlignment="center"/>

        <ImageView
                android:id="@+id/dianzan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20.0dip"
                android:src="@drawable/nav_icon_like"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/home_game_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50.0dip">

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffffffff"
                    android:id="@+id/centertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/youzhuyugenghaodejizhujiezou"
                    android:layout_centerInParent="true"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/game_icon_1"
                    android:layout_toLeftOf="@id/centertext"
                    android:layout_marginEnd="8.0dip"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffffffff"
                    android:id="@+id/centertext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nengzhunquedetanzoujiezou"
                    android:layout_centerInParent="true"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/game_icon_2"
                    android:layout_toLeftOf="@id/centertext1"
                    android:layout_marginEnd="8.0dip"/>
        </RelativeLayout>

        <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0">

            <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:textSize="13.0sp"
                        android:textColor="#ffb3b3b3"
                        android:gravity="center"
                        android:id="@+id/xunLianNanDu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xunliannandu"
                        android:layout_centerInParent="true"
                        android:textAlignment="center"/>

                <View
                        android:background="#ffb3b3b3"
                        android:layout_width="20.0dip"
                        android:layout_height="2.0dip"
                        android:layout_marginRight="10.0dip"
                        android:layout_toLeftOf="@id/xunLianNanDu"
                        android:layout_centerVertical="true"/>

                <View
                        android:background="#ffb3b3b3"
                        android:layout_width="20.0dip"
                        android:layout_height="2.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_toRightOf="@id/xunLianNanDu"
                        android:layout_centerVertical="true"/>
            </RelativeLayout>

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffb3b3b3"
                    android:gravity="center"
                    android:id="@+id/jiandanBtn"
                    android:background="@drawable/game_level_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="19.0dip"
                    android:layout_marginBottom="19.0dip"
                    android:text="@string/jiandan"
                    android:textAlignment="center"/>

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffb3b3b3"
                    android:gravity="center"
                    android:id="@+id/zhongdengBtn"
                    android:background="@drawable/game_level_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19.0dip"
                    android:text="@string/zhongdeng"
                    android:textAlignment="center"/>

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffb3b3b3"
                    android:gravity="center"
                    android:id="@+id/kunnanBtn"
                    android:background="@drawable/game_level_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kunnan"
                    android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>