<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="#ffffffff"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
            android:id="@+id/feedback_input_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15.0dip"
            android:src="@mipmap/feedback_close"
            android:onClick="onClick_back"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

        <TextView
                android:textSize="18.0sp"
                android:textStyle="bold"
                android:textColor="@color/feedback_input_title_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30.0dip"
                android:text="@string/feedback_text"/>

        <TextView
                android:textSize="12.0sp"
                android:textColor="@color/feedback_input_desc_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30.0dip"
                android:text="@string/feedback_desc"/>

        <EditText
                android:textSize="12.0sp"
                android:textColor="@color/feedback_input_content_color"
                android:textColorHint="@color/feedback_input_content_color"
                android:gravity="left"
                android:id="@+id/feedback_content_edit"
                android:background="@color/feedback_input_content_bg_color"
                android:padding="8.0dip"
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip"
                android:hint="@string/feedback_input_placeholder"
                android:layout_weight="1.0"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12.0dip">

            <TextView
                    android:textSize="12.0sp"
                    android:textColor="@color/feedback_input_contact_label_color"
                    android:id="@+id/contact_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30.0dip"
                    android:text="@string/input_contact_title_required"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30.0dip"
                    android:layout_marginTop="5.0dip"
                    android:layout_marginRight="30.0dip">

                <EditText
                        android:textSize="12.0sp"
                        android:textColor="@color/feedback_input_contact_content_color"
                        android:textColorHint="@color/feedback_input_contact_content_color"
                        android:gravity="bottom"
                        android:id="@+id/information"
                        android:background="@color/feedback_input_content_bg_color"
                        android:paddingLeft="5.0dip"
                        android:paddingTop="8.0dip"
                        android:paddingRight="5.0dip"
                        android:paddingBottom="8.0dip"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_contact_placeholder"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:ignore="MissingConstraints"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

        <TextView
                android:textSize="12.0sp"
                android:textColor="@color/feedback_input_send_text_color"
                android:gravity="center"
                android:id="@+id/commit"
                android:background="@mipmap/feedback_send"
                android:layout_width="match_parent"
                android:layout_height="50.0dip"
                android:layout_margin="30.0dip"
                android:text="@string/commit"
                android:onClick="commit"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="30.0dip"
                android:layout_marginLeft="30.0dip"
                android:layout_marginRight="30.0dip">

            <TextView
                    android:textSize="12.0sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@color/feedback_input_separator_color"
                    android:layout_width="wrap_content"
                    android:layout_height="1.0dip"
                    android:layout_weight="1.0"/>

            <TextView
                    android:textColor="@color/feedback_input_contact_us_color"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginRight="5.0dip"
                    android:text="@string/contact_us"/>

            <TextView
                    android:layout_gravity="center"
                    android:background="@color/feedback_input_separator_color"
                    android:layout_width="wrap_content"
                    android:layout_height="1.0dip"
                    android:layout_weight="1.0"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0">

            <RelativeLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:id="@+id/qq"
                        android:layout_width="50.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:onClick="clickQQ">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/feedback_qq"
                            android:layout_alignParentRight="true"/>

                    <TextView
                            android:textSize="12.0sp"
                            android:textColor="@color/feedback_input_contact_method_text_color"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5.0dip"
                            android:text="@string/qq_contact"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0">

                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:id="@+id/email"
                        android:layout_width="50.0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="20.0dip"
                        android:layout_centerInParent="true"
                        android:onClick="onClick">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/feedback_email"
                            android:layout_alignParentRight="true"/>

                    <TextView
                            android:textSize="12.0sp"
                            android:textColor="@color/feedback_input_contact_method_text_color"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5.0dip"
                            android:text="@string/email_contact"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>