<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:background="#00000000"
             android:layout_width="fill_parent"
             android:layout_height="44.0dip"
             android:layout_marginTop="10.0dip">

    <RelativeLayout
            android:id="@+id/rl_vip_season"
            android:background="@drawable/button_fill"
            android:padding="7.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5.0dip">

            <TextView
                    android:textSize="15.0sp"
                    android:textColor="#ffffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¥"/>

            <TextView
                    android:textSize="17.0sp"
                    android:textColor="#ffffffff"
                    android:id="@+id/tv_price_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6.99"/>

            <TextView
                    android:textSize="15.0sp"
                    android:textColor="#ffffffff"
                    android:id="@+id/meiji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meiji"/>

            <View
                    android:layout_width="3.0dip"
                    android:layout_height="fill_parent"/>

            <TextView
                    android:textSize="13.0sp"
                    android:textColor="#ff999999"
                    android:id="@+id/tv_original_price_season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jiesheng"/>
        </LinearLayout>

        <TextView
                android:textColor="#ffffffff"
                android:gravity="center"
                android:id="@+id/seasonBtn"
                android:background="@drawable/butt_buy"
                android:layout_width="86.0dip"
                android:layout_height="30.0dip"
                android:layout_marginRight="3.0dip"
                android:text="@string/goumai"
                android:layout_alignParentRight="true"
                android:textAlignment="center"/>
    </RelativeLayout>
</FrameLayout>